Makefile correction test

--- a/1.Proje/Makefile
+++ b/1.Proje/Makefile
@@ -5,8 +5,8 @@ TEST_TARGET = test_mcu
 OBJ = main.o variables.o
 TEST_OBJ = test/test_mcu.o Unity/unity.o variables.o
 
-# all: $(TARGET) $(TEST_TARGET)
-all: $(TARGET)
+all: $(TARGET) $(TEST_TARGET)
+# all: $(TARGET)
 
 # $(TARGET): main.o variables.o Unity/unity.o
 # 	$(CC) $(CFLAGS) -o $(TARGET) main.o variables.o Unity/unity.o
@@ -14,23 +14,23 @@ all: $(TARGET)
 $(TARGET): main.o variables.o
 	$(CC) $(CFLAGS) -o $(TARGET) main.o variables.o 
 
-# $(TEST_TARGET): $(TEST_OBJ)
-# 	$(CC) $(CFLAGS) -o $(TEST_TARGET) $(TEST_OBJ)
+$(TEST_TARGET): $(TEST_OBJ)
+	$(CC) $(CFLAGS) -o $(TEST_TARGET) $(TEST_OBJ)
 
-# main.o: main.c main.h variables.h
-main.o: main.c variables.h
-	$(CC) $(CFLAGS) -c main.c -o main.o
+main.o: main.c main.h variables.h
+# main.o: main.c variables.h
+# 	$(CC) $(CFLAGS) -c main.c -o main.o
 
 variables.o: variables.c variables.h 
 	$(CC) $(CFLAGS) -c variables.c -o variables.o
 
-# test/test_mcu.o: test/test_mcu.c variables.h main.h
-# 	$(CC) $(CFLAGS) -c test/test_mcu.c -o test/test_mcu.o
+test/test_mcu.o: test/test_mcu.c variables.h main.h
+	$(CC) $(CFLAGS) -c test/test_mcu.c -o test/test_mcu.o
 
-# Unity/unity.o: Unity/unity.c Unity/unity.h Unity/unity_internals.h
-# 	$(CC) $(CFLAGS) -c Unity/unity.c -o Unity/unity.o
+Unity/unity.o: Unity/unity.c Unity/unity.h Unity/unity_internals.h
+	$(CC) $(CFLAGS) -c Unity/unity.c -o Unity/unity.o
 
-# clean:
-# 	rm -f *.o main test_mcu test/*.o Unity/*.o
 clean:
-	rm -f *.o $(TARGET)
+	rm -f *.o main test_mcu test/*.o Unity/*.o
+# clean:
+# 	rm -f *.o $(TARGET)
