--- a/1.Proje/Makefile
+++ b/1.Proje/Makefile
@@ -2,26 +2,21 @@ CC = gcc
 CFLAGS = -Wall -std=c99 -I. -IUnity
 TARGET = main
 TEST_TARGET = test_mcu
-OBJ = main.o variables.o
-TEST_OBJ = test/test_mcu.o Unity/unity.o variables.o
+OBJ = main.o variables.o Unity/unity.o
+TEST_OBJ = test/test_mcu.o main.o variables.o Unity/unity.o
 
 all: $(TARGET) $(TEST_TARGET)
-# all: $(TARGET)
 
-# $(TARGET): main.o variables.o Unity/unity.o
-# 	$(CC) $(CFLAGS) -o $(TARGET) main.o variables.o Unity/unity.o
-
-$(TARGET): main.o variables.o
+$(TARGET): main.o variables.o 
 	$(CC) $(CFLAGS) -o $(TARGET) main.o variables.o 
 
 $(TEST_TARGET): $(TEST_OBJ)
 	$(CC) $(CFLAGS) -o $(TEST_TARGET) $(TEST_OBJ)
 
-main.o: main.c main.h variables.h
-# main.o: main.c variables.h
-# 	$(CC) $(CFLAGS) -c main.c -o main.o
+main.o: main.c main.h
+	$(CC) $(CFLAGS) -c main.c -o main.o
 
-variables.o: variables.c variables.h 
+variables.o: variables.c variables.h
 	$(CC) $(CFLAGS) -c variables.c -o variables.o
 
 test/test_mcu.o: test/test_mcu.c variables.h main.h
@@ -32,5 +27,3 @@ Unity/unity.o: Unity/unity.c Unity/unity.h Unity/unity_internals.h
 
 clean:
 	rm -f *.o main test_mcu test/*.o Unity/*.o
-# clean:
-# 	rm -f *.o $(TARGET)
